--- a/parking/res/layout/activity_parking_information.xml
+++ b/parking/res/layout/activity_parking_information.xml
@@ -49,7 +49,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="5dp"
-            android:paddingBottom="3dp"
+            android:paddingBottom="5dp"
             android:textSize="15sp"
             android:text="@string/licensePlateNumberTitle"/>
           <TextView 
@@ -63,23 +63,32 @@
             android:textSize="15sp"/>
     </LinearLayout>
     <LinearLayout 
-         android:id="@+id/linear_car_type__arriving"
+         android:id="@+id/linear_car_type_arriving"
          android:layout_below="@+id/linear_license_information_arriving"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
-      <TextView
-         android:id="@+id/tv_car_type_title_arriving"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:paddingLeft="10dp"
-         android:paddingRight="10dp"
-         android:paddingTop="5dp"
-         android:paddingBottom="3dp"
-         android:gravity="left"
-         android:text="@string/carTypeTitleArriving"
-         android:textSize="15sp"/>
-        <Spinner 
+        <TextView
+            android:id="@+id/tv_car_type_title_arriving"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:gravity="left"
+            android:text="@string/carTypeTitleArriving"
+            android:textSize="15sp"/>
+        <TextView
+            android:id="@+id/tv_car_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="3dp"
+            android:textSize="15sp"/>
+<!--        <Spinner
             android:id="@+id/sp_car_type"
             android:background="#EBEBEB"
             android:layout_width="wrap_content"
@@ -89,11 +98,11 @@
             android:paddingTop="3dp"
             android:paddingBottom="3dp"
             android:textSize="15sp"
-            android:entries="@array/carTypeArray"/>
+            android:entries="@array/carTypeArray"/>-->
         </LinearLayout>
         <LinearLayout 
-         android:id="@+id/linear_park_type__arriving"
-         android:layout_below="@+id/linear_car_type__arriving"
+         android:id="@+id/linear_park_type_arriving"
+         android:layout_below="@+id/linear_car_type_arriving"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
@@ -104,25 +113,25 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="5dp"
-            android:paddingBottom="3dp"
+            android:paddingBottom="5dp"
             android:gravity="left"
             android:text="@string/parkingTypeTitleArriving"
             android:textSize="15sp"/>
          <Spinner 
             android:id="@+id/sp_parking_type"
             android:layout_width="wrap_content"
-            android:background="#EBEBEB"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="3dp"
             android:paddingBottom="3dp"
             android:textSize="15sp"
-            android:entries="@array/parkingTypeArray"/>
+            android:entries="@array/parkingTypeArray"
+            android:background="@drawable/edittext_background"/>
          </LinearLayout>
          <LinearLayout 
-         android:id="@+id/linear_location_number__arriving"
-         android:layout_below="@+id/linear_park_type__arriving"
+         android:id="@+id/linear_location_number_arriving"
+         android:layout_below="@+id/linear_park_type_arriving"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
@@ -133,11 +142,22 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="5dp"
-            android:paddingBottom="3dp"
+            android:paddingBottom="5dp"
             android:gravity="left"
             android:text="@string/parkingLocationTitleArriving"
             android:textSize="15sp"/>
-           <Spinner 
+           <EditText
+             android:id="@+id/et_parking_location"
+             android:layout_width="60sp"
+             android:layout_height="wrap_content"
+             android:textSize="15sp"
+             android:paddingLeft="10dp"
+             android:paddingRight="10dp"
+             android:paddingTop="3dp"
+             android:paddingBottom="3dp"
+             android:cursorVisible="false"
+             android:background="@drawable/edittext_background"/>
+<!--           <Spinner
             android:id="@+id/sp_parking_location"
             android:layout_width="wrap_content"
             android:background="#EBEBEB"
@@ -147,17 +167,17 @@
             android:paddingTop="3dp"
             android:paddingBottom="3dp"
             android:textSize="15sp"
-            android:entries="@array/parkingLocationArray"/>
+            android:entries="@array/parkingLocationArray"/>-->
          </LinearLayout>
     <TextView 
         android:id="@+id/tv_start_time_arriving"
-        android:layout_below="@+id/linear_location_number__arriving"
+        android:layout_below="@+id/linear_location_number_arriving"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="3dp"
-        android:paddingBottom="3dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:textSize="15sp"/>
      <!-- <LinearLayout 
          android:id="@+id/linear_photo_arriving"
@@ -196,7 +216,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="5dp"
-                android:paddingBottom="3dp"
+                android:paddingBottom="5dp"
                 android:gravity="left"
                 android:text="@string/photoTitleArriving"
                 android:textSize="15sp"/>
