--- a/parking/res/layout/activity_print_preview.xml
+++ b/parking/res/layout/activity_print_preview.xml
@@ -57,7 +57,7 @@
         android:gravity="left"
         android:text="@string/parkingNumberPrint"
         android:textSize="15sp"/>
-        <TextView 
+<!--        <TextView
         android:id="@+id/tv_location_number_print"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -68,7 +68,7 @@
         android:paddingBottom="3dp"
         android:gravity="left"
         android:text="@string/locationNumberPrint"
-        android:textSize="15sp"/>
+        android:textSize="15sp"/>-->
         </LinearLayout>        
        <TextView 
         android:id="@+id/tv_license_number_print"
