--- a/parking/res/values/strings_activity_parking_history_search.xml
+++ b/parking/res/values/strings_activity_parking_history_search.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="dateTitle">日期：</string>
     <string name="search">查询</string>
-    <string name="payment_state_finished_mobile_wechat">微信未付</string>
+    <string name="payment_state_finished_mobile_wechat">微信支付</string>
     <string name="payment_state_finished_mobile_ali">支付宝支付</string>
     <string name="payment_state_finished_pos">POS机支付</string>
     <string name="payment_state_finished_account">余额支付</string>
